5698: Improving Duplicate Flags Rule
Improve clarity by outputting the specific flags that are duplicates of each other

Reviewed-by: hirt, jmatsuoka